--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
 
     <div class="inputArea">
-      <input placeholder="TODOを入力" />
-      <button>追加</button>
+      <input id = "addText" placeholder="TODOを入力" />
+      <button id="addButton">追加</button>
     </div>
 
 
@@ -24,21 +24,18 @@
 
     <div class="incompleteArea">
       <p class="title">未完了のTODO</p>
-      <ul>
+      <ul id = "incompeteList">
         <div class="listRow">
-          <li>TODOです</li>
-          <button>完了</button>
-          <button>削除</button>
+
         </div>
       </ul>
     </div>
 
     <div class="completeArea">
       <p class="title">完了のTODO</p>
-      <ul>
+      <ul id = "completeList">
         <div class="listRow">
-          <li>完了のTODO</li>
-          <button>戻す</button>
+ 
         </div>
       </ul>
     </div>
